tests/typing/bad/testfile-unused-4.go
package main

import "fmt"
func main() { x, y := 1, 2; fmt.Print(x) }
